automate wraith commands

--- a/Selenium/pom.xml
+++ b/Selenium/pom.xml
@@ -45,5 +45,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware.yamlbeans</groupId>
+            <artifactId>yamlbeans</artifactId>
+            <version>1.06</version>
+        </dependency>
     </dependencies>
 </project>
